# bill4time-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  endpoints.yaml  logging_config.py  pyproject.toml
.github/workflows/: ci.yml
bill4time_mcp/: client.py  credentials.py  server.py
bill4time_mcp/setup/: setup_wizard.py  verify.py
tests/: config.py
